--- a/themes/alchemy/static/css/style.css
+++ b/themes/alchemy/static/css/style.css
@@ -45,12 +45,18 @@ ul{
 HEADINGS
 */
 h1,h2,h3,h4{
-  /*font-family: 'Sansita One', cursive;*/
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Sansita One', cursive;
+  /*font-family: "Source Sans Pro", sans-serif;*/
   margin: 1em 0 .5em 0;
   padding: 0 0 .25em 0;
 }
 
+h2{
+  font-size: 1.5rem;
+}
+h3{
+  font-size: 1.25rem;
+}
 .container {
   max-width: 960px;
   width: 70%;
@@ -260,7 +266,9 @@ NOTEBOOK
 div.input_prompt{
   display: none;
 }
-
+div.prompt:empty{
+  display: none;
+}
 /***************
 ARTICLES
 ***************/
