--- a/themes/alchemy/templates/base.html
+++ b/themes/alchemy/templates/base.html
@@ -77,6 +77,7 @@
           {% endif %}
           <div id="header_links">
             <ul class="list-inline">
+              <li class="list-inline-item"><a href="{{ SITEURL }}">home</a> \ </li>
               {% if DISPLAY_PAGES_ON_MENU %}
               {% for page in pages %}
               <li class="list-inline-item"><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a> \ </li>
@@ -112,8 +113,8 @@
   <footer class="footer">
     <div class="container">
       <div class="row">
-        <p class="col-sm-6 text-sm-right text-muted" id="themeauthor">
-          Inspired by <a href="https://github.com/getpelican/pelican" target="_blank">Pelican</a> / <a href="https://github.com/nairobilug/pelican-alchemy" target="_blank">&#x2728;</a>
+        <p class="col-sm-12 text-sm-right text-muted" id="themeauthor">
+          Built w/ <a href="https://github.com/getpelican/pelican" target="_blank">Pelican</a> / inspired by <a href="https://github.com/nairobilug/pelican-alchemy" target="_blank">&#x2728;</a>
         </p>
       </div>
     </div>
