--- a/themes/alchemy/templates/article.html
+++ b/themes/alchemy/templates/article.html
@@ -62,30 +62,36 @@
       <div class="relatedposts">
           <h1><small>Related posts</small></h1>
           <div class="card-deck-wrapper">
-              <div class="card-deck">
-              <ul class="post-list">
-              {% for related_post in article.related_posts %}
-                  <li>
-                    <div class="card col-sm-4">
-                        <a href="{{ SITEURL }}/{{ related_post.url }}">
-                          <img class="card-img-top img-responsive img-feat-rel" src="{{ related_post.metadata.image }}">
-                        </a>
-                        <div class="card-block">
-                            <h4 class="card-title"><a href="{{ SITEURL }}/{{ related_post.url }}">{{ related_post.title }}</a></h4>
-                            <p class="card-text">{{ related_post.metadata.description }}</p>
-                            <p class="card-text">
-                                <small class="text-muted">
-                                {% for tag in related_post.tags %}
-                                    <a href="{{ SITEURL }}/{{ tag.url }}" class="taglink">#{{ tag }}</a>
-                                    {% if not loop.last %} {% endif %}
-                                {% endfor %}
-                            </small>
-                            </p>
-                        </div>
-                    </div>
-                  </li>
-              {% endfor %}
-              </ul>
+              <div class="row">
+                <ul class="post-list">
+                {% for related_post in article.related_posts %}
+                    <li>
+                      <div class="col-sm-4 card-wrapper">
+                          <div class="card related-art">
+                            <a href="{{ SITEURL }}/{{ related_post.url }}">
+                              <img class="card-img-top img-responsive img-feat-rel" src="{{ related_post.metadata.image }}">
+                            </a>
+                            <div class="card-block">
+                                <h4 class="card-title"><a href="{{ SITEURL }}/{{ related_post.url }}">{{ related_post.title }}</a></h4>
+                                <p class="card-text">{{ related_post.metadata.description }}</p>
+                            </div>
+                            <div class="footer-rel">
+                              <div class="footer-text">
+                                  <p class="card-text">
+                                      <small class="text-muted">
+                                      {% for tag in related_post.tags %}
+                                          <a href="{{ SITEURL }}/{{ tag.url }}" class="taglink">#{{ tag }}</a>
+                                          {% if not loop.last %} {% endif %}
+                                      {% endfor %}
+                                  </small>
+                                  </p>
+                                </div>
+                              </div>
+                          </div>
+                      </div>
+                    </li>
+                {% endfor %}
+                </ul>
               </div>
           </div>
       </div>
