--- a/themes/alchemy/templates/index.html
+++ b/themes/alchemy/templates/index.html
@@ -17,7 +17,7 @@
 
 {% block content %}
 <div class="headertitle">
-<p  class="lead"><strong>Welcome</strong> to my geo tech blog, where I present some of my projects.</p>
+<p  class="lead"><strong>Welcome</strong> to my geo tech blog, where you can read about some of my projects.</p>
   <div class="alltags">
   <ul class="tagcloud list-inline">
         <li class="list-inline-item" style="font-size: {{ articles|count|count_to_font_size }};">
