--- a/themes/alchemy/static/css/style.css
+++ b/themes/alchemy/static/css/style.css
@@ -301,7 +301,7 @@ ARTICLES
   overflow-wrap: break-word
 }
 .img-fluid{
-  border: 1px solid grey;
+ /* border: 1px solid grey;*/
   padding: 2px;
 }
 /******************
@@ -392,4 +392,26 @@ div.card.col-sm-4:hover, div.card.col-sm-4:focus{
 }
 .footer-text{
   padding: 0 0.5rem 0.5rem 1rem;
+}
+
+/**********************
+IMAGES
+![image alt >](/image-right.jpg)
+![image alt <](/image-left.jpg)
+![image alt <>](/center-image.jpg)
+***********************/
+img[alt$=">"] {
+  float:right;
+}
+
+img[alt$="<"] {
+  float:left;
+}
+
+img[alt$="<>"] {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin: auto;
+    float: none!important;
 }
